[package]
name = "moy-sekret"
version = "0.1.0"
authors = ["Leandro Silva <leandrodoze@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodiumoxide = "0.2.5"
data-encoding = "2.2.1"
clap = "3.0.0-beta.1"
serde = { version = "1.0.112", features = ["derive"] }
toml = "0.5.6"
dirs = "2.0.2"
dialoguer = "0.6.2"
console = "0.11.3"
bincode = "1.2.1"